# RHEL-for-Edge-with-Microshift-streaming-data

./: README.md  household-power.camel.yaml
microlab/: README.md  microlab.toml
powerhouse/sender/: Cargo.toml  Dockerfile  client.py  data.csv
powerhouse/sender/src/: main.rs
powerhouse/server/: Cargo.toml  Dockerfile  deployment.yaml  service.yaml
powerhouse/server/src/: main.rs
